--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <version>2.12.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
